<resources>
    <string name="app_name">TaskSearch</string>
    <string name="search">Search</string>
    <string name="all">All</string>
    <string name="active">Active</string>
    <string name="archived">Archived</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="empty_state">You finished your tasks Yeeeh</string>
    <string name="reload">Reload</string>
</resources>